--- a/index.html
+++ b/index.html
@@ -60,11 +60,11 @@
 
       <div class="col-md-12">
         <h1>
-          A theme with personality
+          Connecting Futures, Empowering Careers
         </h1>
 
         <p class="tagline">
-          This is a powerful theme with some great features that you can use in your future projects.
+          Let's embark on this journey together. Join us in shaping futures and turning dreams into reality.
         </p>
         <a class="btn btn-full scrollto" href="#about">Get Started Now</a>
       </div>
@@ -189,7 +189,7 @@
             <div class="card card-block text-center">
               <div>
                 <div class="feature-icon">
-                  <i class="bi bi-briefcase"></i>
+                  <i class="bi bi-people"></i>
                 </div>
               </div>
 
@@ -229,7 +229,7 @@
             <div class="card card-block text-center">
               <div>
                 <div class="feature-icon">
-                  <i class="bi bi-bar-chart"></i>
+                  <i class="bi bi-check2-square"></i>
                 </div>
               </div>
 
@@ -251,7 +251,7 @@
             <div class="card card-block text-center">
               <div>
                 <div class="feature-icon">
-                  <i class="bi bi-binoculars"></i>
+                  <i class="bi bi-share"></i>
                 </div>
               </div>
 
@@ -271,7 +271,7 @@
             <div class="card card-block text-center">
               <div>
                 <div class="feature-icon">
-                  <i class="bi bi-brightness-high"></i>
+                  <i class="bi bi-telephone"></i>
                 </div>
               </div>
 
