--- a/index.html
+++ b/index.html
@@ -85,27 +85,16 @@
       <nav id="navbar" class="navbar order-last order-lg-0">
         <ul>
           <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
-          <li><a class="nav-link scrollto" href="#about">About</a></li>
+          <li><a class="nav-link scrollto" href="#about">About Us</a></li>
           <li><a class="nav-link scrollto" href="#features">Our Process</a></li>
-          <li><a class="nav-link scrollto " href="#portfolio">Join Us</a></li>
-          <li><a class="nav-link scrollto" href="#team">Team</a></li>
-          <!-- <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
+          <li class="dropdown"><a href="#"><span>Services</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
-              <li><a href="#">Drop Down 1</a></li>
-              <li class="dropdown"><a href="#"><span>Deep Drop Down</span> <i class="bi bi-chevron-right"></i></a>
-                <ul>
-                  <li><a href="#">Deep Drop Down 1</a></li>
-                  <li><a href="#">Deep Drop Down 2</a></li>
-                  <li><a href="#">Deep Drop Down 3</a></li>
-                  <li><a href="#">Deep Drop Down 4</a></li>
-                  <li><a href="#">Deep Drop Down 5</a></li>
-                </ul>
-              </li>
-              <li><a href="#">Drop Down 2</a></li>
-              <li><a href="#">Drop Down 3</a></li>
-              <li><a href="#">Drop Down 4</a></li>
+              <li><a href="#">Business Electricity</a></li>
+              <li><a href="#">Employment Agency</a></li>
             </ul>
-          </li> -->
+          </li>
+          <li><a class="nav-link scrollto " href="#portfolio">Join Us</a></li>
+          <!-- <li><a class="nav-link scrollto" href="#team">Team</a></li> -->
           <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
@@ -314,19 +303,19 @@
     <section class="cta">
       <div class="container">
         <div class="row">
-          <div class="col-lg-9 col-sm-12 text-lg-start text-center">
+          <div class="col-lg-12 col-sm-12 text-lg-start text-center">
             <h2>
-              Call to Action Section
+              Our Mission
             </h2>
 
             <p>
-              Lorem ipsum dolor sit amet, nec ad nisl mandamus imperdiet, ut corpora cotidieque cum. Et brute iracundia his, est eu idque dictas gubergren
+              Our mission is simple yet profound: to bridge the gap between talent and opportunity. We believe that everyone deserves a chance to shine in their dream career, and we're committed to making that happen. Through personalized guidance, unmatched expertise, and a passion for nurturing talent, we aim to empower individuals to reach their professional zenith.
             </p>
           </div>
 
-          <div class="col-lg-3 col-sm-12 text-lg-right text-center">
+          <!-- <div class="col-lg-3 col-sm-12 text-lg-right text-center">
             <a class="btn btn-ghost" href="#">Buy This Template</a>
-          </div>
+          </div> -->
         </div>
       </div>
     </section><!-- End Call to Action Section -->
@@ -348,7 +337,7 @@
         </p>
       </div>
 
-      <div class="portfolio-grid">
+      <div class="portfolio-grid d-none">
         <div class="row">
           <div class="col-lg-3 col-sm-6 col-xs-12">
             <div class="card card-block">
@@ -500,7 +489,7 @@
     </section><!-- End Portfolio Section -->
 
     <!-- ======= Team Section ======= -->
-    <section class="team" id="team">
+    <section class="team d-none" id="team">
       <div class="container">
         <h2 class="text-center">
           Meet our team
@@ -620,17 +609,17 @@
             <div class="info">
               <div>
                 <i class="bi bi-geo-alt"></i>
-                <p>A108 Adam Street<br>New York, NY 535022</p>
+                <p>117 Padnall Road<br>Romford, RM6 5ES</p>
               </div>
 
               <div>
                 <i class="bi bi-envelope"></i>
-                <p>info@example.com</p>
+                <p>info@monaarckinc.co.uk</p>
               </div>
 
               <div>
                 <i class="bi bi-phone"></i>
-                <p>+1 5589 55488 55s</p>
+                <p>0203 5764007</p>
               </div>
 
             </div>
