who we are section changes

--- a/index.html
+++ b/index.html
@@ -157,12 +157,18 @@
     </section><!-- End About Section -->
 
     <!-- ======= Welcome Section ======= -->
-    <section class="welcome text-center">
-      <h2>Who We Are</h2>
-      <p class="m-5">
-        <h3>We are more than just an employment placement agency; we are your allies in the quest for professional excellence. With a team of experienced career advisors and industry experts, Monaarck stands as a beacon of guidance, providing insights that lead to informed decisions.</h3>
-      </p>
-      <!-- <img alt="Bell - A perfect theme" class="gadgets-img hidden-md-down" src="assets/img/gadgets.png"> -->
+    <section class="welcome text-center d-flex align-items-center">
+      <div class="container">
+        <div class="row">
+          <div class="col-23">
+            <h2>Who We Are</h2>
+            <p class="m-5">
+              <h3>We are more than just an employment placement agency; we are your allies in the quest for professional excellence. With a team of experienced career advisors and industry experts, Monaarck stands as a beacon of guidance, providing insights that lead to informed decisions.</h3>
+            </p>
+            <!-- <img alt="Bell - A perfect theme" class="gadgets-img hidden-md-down" src="assets/img/gadgets.png"> -->
+          </div>
+        </div>
+      </div>
     </section><!-- End Welcome Section -->
 
     <!-- ======= Features Section ======= -->
