Section Remove from Home Page

--- a/index.html
+++ b/index.html
@@ -171,139 +171,7 @@
       </div>
     </section><!-- End Welcome Section -->
 
-    <!-- ======= Features Section ======= -->
-    <section class="features" id="features">
 
-      <div class="container">
-        <h2 class="text-center">
-          Our Process
-        </h2>
-
-        <div class="row">
-          <div class="feature-col col-lg-4 col-xs-12">
-            <div class="card card-block text-center">
-              <div>
-                <div class="feature-icon">
-                  <i class="bi bi-people"></i>
-                </div>
-              </div>
-
-              <div>
-                <h3>
-                  Consultation
-                </h3>
-
-                <p>
-                  We begin by understanding you your aspirations, skills, and preferences. This forms the foundation of your journey with us.
-                </p>
-              </div>
-            </div>
-          </div>
-
-          <div class="feature-col col-lg-4 col-xs-12">
-            <div class="card card-block text-center">
-              <div>
-                <div class="feature-icon">
-                  <i class="bi bi-card-checklist"></i>
-                </div>
-              </div>
-
-              <div>
-                <h3>
-                  Matching
-                </h3>
-
-                <p>
-                  Using our industry insights, we match you with opportunities that align with your goals and expertise.
-                </p>
-              </div>
-            </div>
-          </div>
-
-          <div class="feature-col col-lg-4 col-xs-12">
-            <div class="card card-block text-center">
-              <div>
-                <div class="feature-icon">
-                  <i class="bi bi-check2-square"></i>
-                </div>
-              </div>
-
-              <div>
-                <h3>
-                  Preparation
-                </h3>
-
-                <p>
-                  From resume refinement to interview coaching, we equip you with the tools you need to shine in the hiring process.
-                </p>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <div class="row">
-          <div class="feature-col col-lg-4 col-xs-12">
-            <div class="card card-block text-center">
-              <div>
-                <div class="feature-icon">
-                  <i class="bi bi-share"></i>
-                </div>
-              </div>
-
-              <div>
-                <h3>
-                  Connection
-                </h3>
-
-                <p>
-                  We facilitate introductions and interviews with potential employers, acting as the bridge between you and your future.
-                </p>
-              </div>
-            </div>
-          </div>
-
-          <div class="feature-col col-lg-4 col-xs-12">
-            <div class="card card-block text-center">
-              <div>
-                <div class="feature-icon">
-                  <i class="bi bi-telephone"></i>
-                </div>
-              </div>
-
-              <div>
-                <h3>
-                  Support
-                </h3>
-
-                <p>
-                  Our support doesn't end with placement. We stay connected, offering guidance as you settle into your new role and grow in your career.
-                </p>
-              </div>
-            </div>
-          </div>
-
-          <div class="feature-col col-lg-4 col-xs-12">
-            <div class="card card-block text-center">
-              <div>
-                <div class="feature-icon">
-                  <i class="bi bi-calendar4-week"></i>
-                </div>
-              </div>
-
-              <div>
-                <h3>
-                  Good Documentation
-                </h3>
-                <p>
-                  We take care of most of the documentation and keep the records up to date.
-                </p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-
-    </section><!-- End Features Section -->
 
     <!-- ======= Call to Action Section ======= -->
     <section class="cta">
@@ -327,7 +195,7 @@
     </section><!-- End Call to Action Section -->
 
     <!-- ======= Portfolio Section ======= -->
-    <section class="portfolio" id="portfolio">
+    <!--section class="portfolio" id="portfolio">
 
       <div class="container text-center">
         <h2>
@@ -492,7 +360,7 @@
           </div>
         </div>
       </div>
-    </section><!-- End Portfolio Section -->
+    </section--><!-- End Portfolio Section -->
 
     <!-- ======= Team Section ======= -->
     <section class="team d-none" id="team">
