form repaced with map

--- a/index.html
+++ b/index.html
@@ -473,13 +473,13 @@
     <section id="contact">
       <div class="container">
         <div class="row">
-          <div class="col-md-12 text-center">
+          <div class="col-md-12 text-center align-items-center">
             <h2 class="section-title">Contact Us</h2>
           </div>
         </div>
 
         <div class="row justify-content-center">
-          <div class="col-lg-3 col-md-4">
+          <div class="col-lg-3 col-md-4 d-flex align-items-center">
             <div class="info">
               <div>
                 <i class="bi bi-geo-alt"></i>
@@ -500,28 +500,7 @@
           </div>
 
           <div class="col-lg-5 col-md-8">
-            <div class="form">
-              <form method="post" action="https://forms.un-static.com/forms/2519b9a88cad79c931b8a0a8e53ee1210ced3b6d" role="form" class="php-email-form">
-                <div class="form-group">
-                  <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required>
-                </div>
-                <div class="form-group mt-3">
-                  <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" required>
-                </div>
-                <div class="form-group mt-3">
-                  <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" required>
-                </div>
-                <div class="form-group mt-3">
-                  <textarea class="form-control" name="message" rows="5" placeholder="Message" required></textarea>
-                </div>
-                <div class="my-3">
-                  <div class="loading">Loading</div>
-                  <div class="error-message"></div>
-                  <div class="sent-message">Your message has been sent. Thank you!</div>
-                </div>
-                <div class="text-center"><button type="submit">Send Message</button></div>
-              </form>
-            </div>
+            <iframe class="map-for-web" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2479.2103777583047!2d0.13038447717372942!3d51.58270757183047!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47d8a4668ef97df5%3A0xcb1896a830e3dd44!2s117%20Padnall%20Rd%2C%20Dagenham%2C%20Romford%20RM6%205ES%2C%20UK!5e0!3m2!1sen!2sin!4v1699039151234!5m2!1sen!2sin" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
           </div>
 
         </div>
