--- a/index.html
+++ b/index.html
@@ -526,7 +526,7 @@
               Licensing information: https://bootstrapmade.com/license/
               Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=Bell
             -->
-              Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+              Designed by <a href="http://monaarckinc.co.uk/">Monaarck</a>
             </div>
           </div>
 
