services and inner services section

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
           <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
           <li><a class="nav-link scrollto" href="#about">About Us</a></li>
           <li><a class="nav-link scrollto" href="#features">Our Process</a></li>
-          <li class="dropdown"><a href="#"><span>Services</span> <i class="bi bi-chevron-down"></i></a>
+          <li class="dropdown"><a href="#services" class="nav-link scrollto "><span>Services</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               <li><a href="#">Business Electricity</a></li>
               <li><a href="#">Employment Agency</a></li>
@@ -468,6 +468,41 @@
         </div>
       </div>
     </section><!-- End Team Section -->
+
+    <section class="services-sec" id="services">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-12 text-center">
+            <h2 style="font-weight: bold;">Services</h2>
+          </div>
+        </div>
+        <div class="row justify-content-center">
+          <div class="col-md-12 col-lg-10">
+            <div class="row main-container">
+              <div class="col-sm-12 col-md-6 p-0">
+                <div class="service1container">
+                  <h3 class="bold mb-4">Business Electricity</h3>
+                  <div class="content-container mb-4">
+                    <p>Monaarck Inc Ltd is a business electricity broker and is a specialized type of energy broker who focuses specifically on helping businesses procure electricity services. We play a crucial role in assisting businesses in finding the most suitable and...</p>
+                  </div>
+                  <a class="btn whver" href="./inner-page.html">Read More</a>
+                </div>
+                
+              </div>
+              <div class="col-sm-12 col-md-6 p-0">
+                <div class="service2container">
+                  <h3 class="bold mb-4">Employment Agency</h3>
+                  <div class="content-container mb-4">
+                    <p>This service offers a personalized approach to career development, understanding each individual's unique strengths and goals. They have an extensive network to provide diverse job opportunities. Expert guidance is provided for resume building,...</p>
+                  </div>
+                  <a class="btn" href="./inner-page.html">Read More</a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
 
     <!-- ======= Contact Section ======= -->
     <section id="contact">
