Inner Page Template Work

--- a/inner-page.html
+++ b/inner-page.html
@@ -37,6 +37,20 @@
 
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
+  <style>
+    #header.active {
+    background: #fff;
+}
+#header.active .navbar a, #header.active .navbar a:focus{
+  color: #333;
+}
+#header.active #logo img{
+  filter: invert(1);
+}
+#header.active .header-social-links a{
+  color: #000;
+}
+  </style>
 
   <!-- =======================================================
   * Template Name: Bell
@@ -50,7 +64,7 @@
 <body>
 
   <!-- ======= Header ======= -->
-  <header id="header" class="d-flex align-items-center">
+  <header id="header" class="d-flex align-items-center active">
     <div class="container d-flex align-items-center">
 
       <div id="logo" class="me-auto">
@@ -118,6 +132,123 @@
     </div>
   </div>
 </section>
+
+
+<div class="upper-content-sec mt-5 py-5">
+  <div class="container">
+    <div class="row">
+      <div class="col-12 text-center">
+        <p>Monaarck Inc Ltd is a business electricity broker and is a specialized type of energy broker who focuses specifically on helping businesses procure electricity services. We play a crucial role in assisting businesses in finding the most suitable and cost-effective electricity contracts for their needs. Here's a closer look at what we offer as an (a) business electricity broker and how they can benefit businesses:</p>
+      </div>
+    </div>
+  </div>
+</div>
+
+<section class="points-content">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-12">
+        <div class="content-card w-100 d-flex">
+          <div class="count-div">
+            <span>01</span>
+          </div>
+          <div class="content-cont d-flex flex-column"><h3>Procurement Services:</h3><p>We(As) electricity brokers work (we) with a network of energy suppliers and have a deep understanding of the electricity market. We help businesses procure electricity contracts that align with their consumption patterns, budget, and long-term goals.</p>
+            </div>
+        </div>
+      </div>
+      <div class="col-lg-12">
+        <div class="content-card w-100 d-flex">
+          <div class="count-div">
+            <span>02</span>
+          </div>
+          <div class="content-cont d-flex flex-column"><h3>Market Knowledge::</h3><p>Electricity markets can be complex and volatile. We stay updated on market trends, regulatory changes, and pricing(price) fluctuations. We provide valuable insights to businesses, helping them make informed decisions.</p>
+            </div>
+        </div>
+      </div>
+      <div class="col-lg-12">
+        <div class="content-card w-100 d-flex">
+          <div class="count-div">
+            <span>03</span>
+          </div>
+          <div class="content-cont d-flex flex-column"><h3>Cost Savings:</h3><p>One of the primary goals of Monaarck Inc Ltd is to help businesses save money on their energy expenses. We leverage their market knowledge to negotiate favorable terms and rates with energy suppliers, potentially resulting in significant cost savings over time.</p>
+            </div>
+        </div>
+      </div>
+      <div class="col-lg-12">
+        <div class="content-card w-100 d-flex">
+          <div class="count-div">
+            <span>04</span>
+          </div>
+          <div class="content-cont d-flex flex-column"><h3>Customized Solutions:</h3><p>Every business has unique energy needs. Monaarck Inc Ltd analyses a company's energy consumption patterns and business operations to tailor energy solutions that suit their specific requirements.</p>
+            </div>
+        </div>
+      </div>
+      <div class="col-lg-12">
+        <div class="content-card w-100 d-flex">
+          <div class="count-div">
+            <span>05</span>
+          </div>
+          <div class="content-cont d-flex flex-column"><h3>Contract Negotiations:</h3><p><strong>Monaarck Inc Ltd negotiates on behalf of businesses to secure contracts that offer competitive pricing, flexible terms, and favorable conditions.</strong> We have the expertise to navigate contract complexities and ensure that businesses are getting the best deal possible.</p>
+            </div>
+        </div>
+      </div>
+      <div class="col-lg-12">
+        <div class="content-card w-100 d-flex">
+          <div class="count-div">
+            <span>06</span>
+          </div>
+          <div class="content-cont d-flex flex-column"><h3>Energy Efficiency:</h3><p>Monaarck Inc Ltd also offers energy efficiency consulting services. We can provide recommendations on how businesses can optimize their energy usage, reduce waste, and adopt sustainable practices, which can further contribute to cost savings.</p>
+            </div>
+        </div>
+      </div>
+      <div class="col-lg-12">
+        <div class="content-card w-100 d-flex">
+          <div class="count-div">
+            <span>07</span>
+          </div>
+          <div class="content-cont d-flex flex-column"><h3>Simplifying the Process:</h3><p>Navigating the energy procurement process can be time-consuming and overwhelming for businesses. Monaarck Inc Ltd simplifies the process by handling paperwork, negotiations, and other administrative tasks, allowing businesses to focus on their core operations.</p>
+            </div>
+        </div>
+      </div>
+      <div class="col-lg-12">
+        <div class="content-card w-100 d-flex">
+          <div class="count-div">
+            <span>08</span>
+          </div>
+          <div class="content-cont d-flex flex-column"><h3>Renewable Energy Options:</h3><p>As the demand for renewable energy sources grows, Monaarck Inc Ltd can help businesses find green energy solutions that align with their sustainability goals.</p>
+            </div>
+        </div>
+      </div>
+      <div class="col-lg-12">
+        <div class="content-card w-100 d-flex">
+          <div class="count-div">
+            <span>09</span>
+          </div>
+          <div class="content-cont d-flex flex-column"><h3>Risk Management:</h3><p>Electricity prices can be subject to fluctuations due to factors like supply and demand, geopolitical events, and weather conditions. Monaarck Inc Ltd will assist in managing these risks by recommending appropriate contract structures and hedging strategies.</p>
+            </div>
+        </div>
+      </div>
+      <div class="col-lg-12">
+        <div class="content-card w-100 d-flex">
+          <div class="count-div">
+            <span>10</span>
+          </div>
+          <div class="content-cont d-flex flex-column"><h3>Ongoing Support:</h3><p>The relationship with Monaarck Inc Ltd will often extend beyond the initial contract negotiation. They provide ongoing support by monitoring energy markets, managing contract renewals, and assisting with any issues that may arise.</p>
+            </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+<div class="upper-content-sec mt-5 py-5">
+  <div class="container">
+    <div class="row">
+      <div class="col-12 text-center">
+        <p>The relationship with Monaarck Inc Ltd will often extend beyond the initial contract negotiation. They provide ongoing support by monitoring energy markets, managing contract renewals, and assisting with any issues that may arise.</p>
+      </div>
+    </div>
+  </div>
+</div>
         <!-- ======= Features Section ======= -->
         <section class="features" id="features">
 
@@ -326,7 +457,20 @@
 
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
+<script>
+  document.addEventListener("DOMContentLoaded", function() {
+    var header = document.querySelector("#header");
+    window.addEventListener("scroll", function() {
+        var scroll = window.pageYOffset || document.documentElement.scrollTop;
 
+        if (scroll >= 200) {
+            header.classList.remove('active');
+        } else {
+            header.classList.add('active');
+        }
+    });
+});
+</script>
 </body>
 
 </html>
