--- a/index.html
+++ b/index.html
@@ -101,10 +101,8 @@
       </nav><!-- .navbar -->
 
       <div class="header-social-links d-flex align-items-center">
-        <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
-        <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
-        <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
-        <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></i></a>
+        <a href="tel:02035764007" class="phone me-2"><i class="bi bi-telephone-fill"></i></a>
+        <a href="mailto:info@monaarckinc.co.uk" class="email"><i class="bi bi-envelope"></i></a>
       </div>
     </div>
   </header><!-- End Header -->
