--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
 
-      <div class="header-social-links d-flex align-items-center">
+      <div class="header-social-links d-flex align-items-center d-sm-none">
         <a href="tel:02035764007" class="phone me-2"><i class="bi bi-telephone-fill"></i></a>
         <a href="mailto:info@monaarckinc.co.uk" class="email"><i class="bi bi-envelope"></i></a>
       </div>
