Sub Services Link Change

--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
           <li><a class="nav-link scrollto" href="#features">Our Process</a></li>
           <li class="dropdown"><a href="#services" class="nav-link scrollto "><span>Services</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
-              <li><a href="#">Business Electricity</a></li>
-              <li><a href="#">Employment Agency</a></li>
+              <li><a href="./electricity.html">Business Electricity</a></li>
+              <li><a href="./employment-agency.html">Employment Agency</a></li>
             </ul>
           </li>
           <li><a class="nav-link scrollto " href="#portfolio">Join Us</a></li>
@@ -483,7 +483,7 @@
                   <div class="content-container mb-4">
                     <p>Monaarck Inc Ltd is a business electricity broker and is a specialized type of energy broker who focuses specifically on helping businesses procure electricity services. We play a crucial role in assisting businesses in finding the most suitable and...</p>
                   </div>
-                  <a class="btn whver" href="./inner-page.html">Read More</a>
+                  <a class="btn whver" href="./electricity.html">Read More</a>
                 </div>
                 
               </div>
@@ -493,7 +493,7 @@
                   <div class="content-container mb-4">
                     <p>This service offers a personalized approach to career development, understanding each individual's unique strengths and goals. They have an extensive network to provide diverse job opportunities. Expert guidance is provided for resume building,...</p>
                   </div>
-                  <a class="btn" href="./inner-page.html">Read More</a>
+                  <a class="btn" href="./employment-agency.html">Read More</a>
                 </div>
               </div>
             </div>
