Banner Image Change

--- a/electricity.html
+++ b/electricity.html
@@ -124,7 +124,7 @@
     <main id="main">
       <section class="inner-banner">
         <div class="img-container">
-          <img src="./assets/img/service2img.jpg" alt="" />
+          <img src="./assets/img/electric-services-banner.jpg" alt="" />
         </div>
         <div class="container">
           <div class="row">
