--- a/index.html
+++ b/index.html
@@ -86,14 +86,14 @@
         <ul>
           <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
           <li><a class="nav-link scrollto" href="#about">About Us</a></li>
-          <li><a class="nav-link scrollto" href="#features">Our Process</a></li>
+          <li><a class="nav-link scrollto" href="#who-we-are">Who We Are</a></li>
+          <li><a class="nav-link scrollto" href="#our-mission">Our Mission</a></li>
           <li class="dropdown"><a href="#services" class="nav-link scrollto "><span>Services</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               <li><a href="./electricity.html">Business Electricity</a></li>
               <li><a href="./employment-agency.html">Employment Agency</a></li>
             </ul>
           </li>
-          <li><a class="nav-link scrollto " href="#portfolio">Join Us</a></li>
           <!-- <li><a class="nav-link scrollto" href="#team">Team</a></li> -->
           <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
         </ul>
@@ -103,7 +103,9 @@
       <div class="header-social-links d-flex align-items-center d-sm-none">
         <a href="tel:02035764007" class="phone me-2"><i class="bi bi-telephone-fill"></i></a>
         <a href="mailto:info@monaarckinc.co.uk" class="email"><i class="bi bi-envelope"></i></a>
+        
       </div>
+      <a href="tel02084717796" class="call-button"><i class="bi bi-telephone-fill"></i> 0208 471 7796</a>
     </div>
   </header><!-- End Header -->
 
@@ -155,7 +157,7 @@
     </section><!-- End About Section -->
 
     <!-- ======= Welcome Section ======= -->
-    <section class="welcome text-center d-flex align-items-center">
+    <section class="welcome text-center d-flex align-items-center" id="who-we-are">
       <div class="container">
         <div class="row">
           <div class="col-23">
@@ -172,7 +174,7 @@
 
 
     <!-- ======= Call to Action Section ======= -->
-    <section class="cta">
+    <section class="cta" id="our-mission">
       <div class="container">
         <div class="row">
           <div class="col-lg-12 col-sm-12 text-lg-start text-center">
