--- a/index.html
+++ b/index.html
@@ -100,12 +100,12 @@
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
 
-      <div class="header-social-links d-flex align-items-center d-sm-none">
+      <div class="header-social-links d-flex align-items-center d-lg-none pe-3">
         <a href="tel:02035764007" class="phone me-2"><i class="bi bi-telephone-fill"></i></a>
         <a href="mailto:info@monaarckinc.co.uk" class="email"><i class="bi bi-envelope"></i></a>
         
       </div>
-      <a href="tel02084717796" class="call-button"><i class="bi bi-telephone-fill"></i> 0208 471 7796</a>
+      <a href="tel:02084717796" class="call-button d-none d-lg-flex"><i class="bi bi-telephone-fill"></i> 0208 471 7796</a>
     </div>
   </header><!-- End Header -->
 
