--- a/employment-agency.html
+++ b/employment-agency.html
@@ -66,6 +66,9 @@
         background: var(--theme-color);
         color: #fff;
       }
+      #header.active .mobile-nav-toggle {
+        color: #000;
+      }
     </style>
 
     <!-- =======================================================
