Company Name Updated In Content

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
         </h2>
 
         <p>
-          Welcome to Monaarck, your dedicated partner in shaping futures and fueling career success. At [Your Agency Name], we understand that finding the right career path can be a transformative journey, and we're here to guide you every step of the way.
+          Welcome to Monaarck, your dedicated partner in shaping futures and fueling career success. At Monaarck, we understand that finding the right career path can be a transformative journey, and we're here to guide you every step of the way.
         </p>
 
         <div class="row stats-row">
